fixed style; the incorrect z-index prevented correct rendering in firefox
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15106 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/templates/css/base.css
+++ b/contributions/didactor2/src/core/templates/css/base.css
@@ -472,7 +472,7 @@ a.path:hover {
 	color: #000000;
 	width: 20%;
 	height: 100%;
-	top: 2.5em;
+	top: 2em;
 	position: relative;
 	z-index: 8;
 	background-color: #FFFFFF;
@@ -483,7 +483,7 @@ a.path:hover {
 	color: #000000;
 	width: 20%;
 	height: 100%;
-	top: 2.5em;
+	top: 2em;
 	position: absolute;
 	z-index: 8;
 	background-color: #FFFFFF;
@@ -564,7 +564,7 @@ a.treeNavigation:hover {
 	top: 2em;
 	left: 20%;
 	position: absolute; 
-	z-index: 1;
+	z-index: 2;
 	padding: 0em 0em 0em 0em;
 	border-left: 1px solid #888888 }
 
